@@ -141,7 +141,7 @@
 #define STDC_HEADERS 1
 
 /* Most recent revision number in the version control system */
-#define VCS_REVISION "198"
+#define VCS_REVISION "200"
 
 /* Version number of package */
 #define VERSION "2.10"
